# nemesyst

./: .dockerignore  .env  .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_archlinux  Dockerfile_ubuntu  LICENSE  README.md  README.rst  dataWrangler  docker-compose.yml  main.cpp  nemesyst  nemesyst.py  ravenRecSyst  ravenRecSyst.py  requirements.txt  runRecSyst  setup.py  startMongod  unit_test.py
.arch/: PKGBUILD
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md  house-keeping.md
Misc/: RNN.py  addMongoDocument.py  debug.py  knn.py  main  mf.py  mongo.py  monteCarlo.py  movieLenseDataCombiner.py  movieLenseWrangler.py  nmf.py  rnn.py  seabornScatter.py  svd.py  svdpp.py  template.py  tensorFlowCPUDebug.py
arch/: PKGBUILD
archive/: initMongoDb  main.cpp
archive/Misc/: initUser.py  mf.py  monteCarlo.py  movieLenseWrangler.py  svd.py  svdpp.py  tsv2Csv
config/: config.ini  pipeline.json  rrs_ml.ini  rrs_pipeline.json
docs/: nemesyst.py  nemesyst_core  requirements.txt
docs/paper/: main.tex
docs/source/: conceptualisation.rst  conf.py  docker.rst  index.rst  installation.rst  justification.rst  logger.rst  mnist.rst  mongodb.rst  mongodb_handler.rst  (+4 more)
examples/: cfgarg.ipynb  cleaner.py  crypt_test.ipynb  gan.py  lstm.py  ml_20m_cleaner.py  ml_20m_config.ini
nemesyst.d/: nemesyst.conf
nemesyst_core/: args.py  logger.py  mongo.py  mongodb_handler.py
paper/: main.tex
src/: aDict.py  arg.py  data.py  gan.py  helpers.py  importer.py  log.py  neuralNetwork.py
tests/: learning.sh  serving.sh  test_everything.sh
(+29 files in other folders)
